--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -1,2 +1,6 @@
 .incogtech_wysiwyg_editor {
+    box-shadow: 2px 5px 7px #000, 0 0 7px #000;
+    padding: 3px 7px;
+    margin: 0 7px;
+    border-radius: 2px;
 }
